--- a/_posts/2026-02-08-book-ddd-01.md
+++ b/_posts/2026-02-08-book-ddd-01.md
@@ -249,7 +249,7 @@ setter를 사실상 피할 수 없다.
 개발자는 도메인과 코드 사이에서 불필요한 해석을 줄일 수 있다.
 
 추가로 유비쿼터스 언어에 대해 마틴 파울러가 작성한 글이 있다.<br/>
-→ <a link="https://martinfowler.com/bliki/UbiquitousLanguage.html">ubiquitous language</a>
+→ <a href="https://martinfowler.com/bliki/UbiquitousLanguage.html">ubiquitous language</a>
 
 <br/>
 ```
